@@ -5,8 +5,8 @@ import java.util.List;
 
 public class MapDemo4 {
 	public static void main(String[] args) {
-		//List<String> fruits = Arrays.asList("apple", "apple", "banana", "apple", "orange", "banana", "papapy");
-		List<String> fruits = List.of("apple", "apple", "banana", "apple", "orange", "banana", "papapy");
+		//List<String> fruits = Arrays.asList("apple", "apple", "banana", "apple", "orange", "banana", "papaya");
+		List<String> fruits = List.of("apple", "apple", "banana", "apple", "orange", "banana", "papaya"); // 唯讀
 		System.out.println(fruits);
 		// 請問每一種水果個有幾個 ?
 		
